--- a/my-restful-api/test.html
+++ b/my-restful-api/test.html
@@ -2,57 +2,94 @@
 <html>
 <head>
     <title>Test Clip API</title>
+    <style>
+        body { max-width: 800px; margin: 0 auto; padding: 20px; font-family: Arial; }
+        .form-group { margin-bottom: 15px; }
+        input, textarea { width: 100%; padding: 8px; margin-top: 5px; }
+        button { padding: 10px 20px; background: #0070f3; color: white; border: none; cursor: pointer; }
+        #result { margin-top: 20px; padding: 10px; background: #f0f0f0; }
+    </style>
 </head>
 <body>
     <h2>Create Clip</h2>
     <form id="createForm">
-        <input type="text" id="urlSlug" placeholder="URL Slug" required><br>
-        <textarea id="textContent" placeholder="Content"></textarea><br>
-        <input type="password" id="password" placeholder="Password (optional)"><br>
+        <div class="form-group">
+            <label>URL Slug:</label>
+            <input type="text" id="urlSlug" required>
+        </div>
+        <div class="form-group">
+            <label>Content:</label>
+            <textarea id="textContent" rows="4"></textarea>
+        </div>
+        <div class="form-group">
+            <label>Password (optional):</label>
+            <input type="password" id="password">
+        </div>
+        <div class="form-group">
+            <label>Expires At (optional):</label>
+            <input type="datetime-local" id="expiresAt">
+        </div>
         <button type="submit">Create Clip</button>
     </form>
 
     <h2>Get Clip</h2>
     <form id="getForm">
-        <input type="text" id="getUrlSlug" placeholder="URL Slug" required><br>
+        <div class="form-group">
+            <label>URL Slug:</label>
+            <input type="text" id="getUrlSlug" required>
+        </div>
+        <div class="form-group">
+            <label>Password (if protected):</label>
+            <input type="password" id="getPassword">
+        </div>
         <button type="submit">Get Clip</button>
     </form>
 
     <div id="result"></div>
 
     <script>
+        const API_URL = 'http://localhost:8000/api/clips';
+
         document.getElementById('createForm').onsubmit = async (e) => {
             e.preventDefault();
             const data = {
                 url_slug: document.getElementById('urlSlug').value,
                 content_type: 'text',
                 text_content: document.getElementById('textContent').value,
-                password_hash: document.getElementById('password').value || null
+                password: document.getElementById('password').value || null,
+                expires_at: document.getElementById('expiresAt').value || null
             };
 
             try {
-                const response = await fetch('http://localhost:8000/api/clips', {
+                const response = await fetch(API_URL, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(data)
                 });
                 const result = await response.json();
-                document.getElementById('result').textContent = JSON.stringify(result);
+                document.getElementById('result').textContent = JSON.stringify(result, null, 2);
             } catch (error) {
                 console.error('Error:', error);
+                document.getElementById('result').textContent = 'Error: ' + error.message;
             }
         };
 
         document.getElementById('getForm').onsubmit = async (e) => {
             e.preventDefault();
             const urlSlug = document.getElementById('getUrlSlug').value;
+            const password = document.getElementById('getPassword').value;
 
             try {
-                const response = await fetch(`http://localhost:8000/api/clips?url_slug=${urlSlug}`);
+                const url = new URL(API_URL);
+                url.searchParams.append('url_slug', urlSlug);
+                if (password) url.searchParams.append('password', password);
+
+                const response = await fetch(url);
                 const result = await response.json();
-                document.getElementById('result').textContent = JSON.stringify(result);
+                document.getElementById('result').textContent = JSON.stringify(result, null, 2);
             } catch (error) {
                 console.error('Error:', error);
+                document.getElementById('result').textContent = 'Error: ' + error.message;
             }
         };
     </script>
